# graphics

./: .gitignore  README.md  analysis_types.py  color_palettes.py  curves_pipeline.py  curves_scan.py  functions_for_tab1.py  gui_bridge.py  logging_utils.py  main.py  naming.py  plot_from_txt.py  pyproject.toml  report_docx.py  requirements.txt  settings.py  tab1.py  tab3.py  topfolder_codec.py  tree_schema.py  validators.py
examples/: combined_labels.py  xy_pairs_with_blanks.txt
function_for_all_tabs/: __init__.py  plotting_adapter.py  readers.py
functions_for_tab2/: __init__.py  dependent.py  exporting.py  grid.py  models.py  presets.py  segment_builder.py  stitch.py
mylibproject/: Figurenameclass.py  myutils.py  myutils_dont_use.py  myutils_widgets.py  myutils_work_with_file.py
tabs/: __init__.py  constants.py  tab1.py  tab2.py  tab3.py  tab4.py  title_utils.py
tests/: test_adjust_curves_root.py  test_analysis_type_validator.py  test_cfile_extension.py  test_combined_excel_ranges.py  test_combined_frequency_analysis.py  test_combined_text_ls_dyna_columns.py  test_command_all.py  test_command_single.py  test_create_plot_fontstyle.py  test_curves_pipeline_errors.py  test_curves_process.py  test_curves_scan.py  test_dependent_from_file_text.py  test_dependent_values.py  test_entitynode_add_analysis.py  test_entry_positions.py  test_excel_single_range.py  test_export_curve_txt.py  test_figure_names_ylabel_mathtext.py  test_format_plot_title_bfit.py  test_format_signature.py  test_format_title_bolditalic.py  test_frequency_analysis_invalid_file.py  test_naming.py  (+37 more)
(+63 files in other folders)
